fix(ui): dark mode scroll bars

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
   overflow: hidden;
   background: #252627;
   color: #ccc;
+  color-scheme: dark;
   /* color: #d4d4d4; */
 }
 
